--- a/create/index.html
+++ b/create/index.html
@@ -15,10 +15,8 @@
 
 	<!-- The Menu Section -->
 	<div id="menuPanel" class="centered">
-		<span id="homeIcon" class="fa fa-chevron-circle-left" onclick="onReturnHome()"></span>
-		
 		<!-- Adventure Title & Description -->
-		<h2 id="">Dejai's Adventures!<br/> Create</h2>
+		<h1 id=""><a href="/" class="homeLink" target="_self">Dejai's Adventures!</a><br/> Create</h1>
 		<hr id="adventureSeparator" style="clear:both;"/>
 
 	</div>
@@ -33,42 +31,23 @@
 
 		<!-- Form for creating user  -->
 		<form id="protectedVideoForm" class="centered" action="" method="POST" onsubmit="onCreateNewUser(event)">
-            <div style="width:50%; margin:auto;" class="centered">
-                <table style="width:100%; text-align:left; ">
-                    <colgroup>
-                        <col style="width:30%;">
-                        <col style="width:50%;">
-                    </colgroup>
-                    <tr>
-                        <td>
-                            <label for="username">Name: </label>
-                        </td>
-                        <td>
-                            <input id="username" type="text" style="width:100%" name="username" placeholder="Enter your name" required>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label for="username">Nickname: </label>
-                        </td>
-                        <td>
-                            <input id="nickname" type="text" style="width:100%" name="nickname" placeholder="Enter a nickname" required>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label for="phoneNumber">Phone Number: </label>
-                        </td>
-                        <td>
-                            <input id="phoneNumber" type="text" style="width:100%" name="phoneNumber" placeholder="Enter your phone number">
-                        </td>
-                    </tr>
-                </table>
+            <div style="width:40%; margin:auto;" class="centered">
+                <label for="username">Name: </label><br/>
+                <input id="username" type="text" style="width:100%" name="username" placeholder="Enter your name" required>
+                <br/><br/>
+                <label for="username">Nickname: </label><br/>
+                <input id="nickname" type="text" style="width:100%" name="nickname" placeholder="Enter a nickname" required>
+                <br/><br/>
+                <label for="phoneNumber">Phone Number: </label><br/>
+                <input id="phoneNumber" type="text" style="width:100%" name="phoneNumber" placeholder="Enter your phone number">
             </div>
             <div class="centered">
 				<img id="submitLoadingGIF" class="hidden" style="width:100px;height:100px;" src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="...loading">
 			</div>
-			<input id="submitButton" class="pointer dlf_button dlf_button_round_corners dlf_button_limegreen" type="submit" name="submit" value="Create">
+			<div>
+				<br/>
+				<input id="submitButton" class="pointer dlf_button dlf_button_round_corners dlf_button_limegreen" type="submit" name="submit" value="Create">
+			</div>
 		</form>
 
         <!-- Success path -->
@@ -76,7 +55,7 @@
             <h2>User Successfully Created</h2>
             <p>You will get a text message, to confirm when you have access.</p>
             <br/>
-            <a href="/" target="_self" style="text-decoration:none; color:lightblue;">Go Home</a>
+            <a href="/" target="_self" style="text-decoration:none; color:orange;">Home</a>
         </div>
         <h2 id="successMessage" style="color:limegreen;"></h2>
 	</div>
