--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
-<body class="theme_black_bg">
-	<div id="menuPanel" class="centered">
-		<h1>Dejai's Adventures!</h1>
+<body class="theme_black_bg">		
+	<div id="menuPanel" class="centered" style="position:relative;">
+		<h1 style="position:relative; margin-top:1px;">Dejai's Adventures!</h1>
 		<p>A set of adventures I've enjoyed with family & friends!</p>
+		<p id="loginSection" style="text-align:center; color:orange; margin-top:0px;">
+			<a href="login/" style="margin:0px; color:inherit; font-size:20px; text-decoration:none; ">
+				Login
+			</a>
+		</p>	
 	</div>
-	<div id="findAdventureSection" class="centered hidden">
+	<div id="findAdventureSection" style="clear:both;" class="centered hidden">
+			
 		<p>Filter Adventures:</p>
 		<div id="filterSection"></div>
 		<br/>
