--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
 <!-- My Trello code -->
 <script src="https://dejai.github.io/scripts/js/trellowrapper.js"></script>
 <!-- My Videos Code -->
+<script type="text/javascript" src="./src/models.js"></script>
 <script type="text/javascript" src="./src/main.js"></script>
 </html>
