--- a/login/index.html
+++ b/login/index.html
@@ -5,7 +5,7 @@
 	<base href="../" target="_blank">
 
 	<title>Dejai's Adventures</title>
-	<link rel="stylesheet" type="text/css" href="src/adventure.css">
+	<link rel="stylesheet" type="text/css" href="src/main.css">
 	<link rel="stylesheet" type="text/css" href="login/src/login.css">
 	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dlf_styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
