--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
 		</p>	
 	</div>
 	<div id="findAdventureSection" style="clear:both;" class="centered hidden">
-			
-		<p>Filter Adventures:</p>
-		<div id="filterSection"></div>
-		<br/>
+		<div id="filterSubsection">
+			<p>Filter Adventures:</p>
+			<div id="filterSection"></div>
+		</div>
+		<div id="searchBarSection">
+			<div id="searchBar" class="searchBar searchPlaceholder" data-adv-placeholder="Search adventures ..." contenteditable="true" onkeyup="onSearchAdventures()" onfocus="onSearchFocus()" onblur="onSearchBlur()"></div>
+			<i id="searchClearIcon" class="fa fa-times-circle pointer hidden" aria-hidden="true" style="color:red;" onclick="onClearSearch()"></i>
+		</div>
 		<i id="randomAdventure" class="fa fa-random pointer" onclick="onSelectRandomAdventure()" style="font-size:18px; padding-top:2%; color:orange;" aria-hidden="true" title="Select a random adventure">
 			&nbsp;Random Adventure
 		</i>
