--- a/adventure/index.html
+++ b/adventure/index.html
@@ -33,8 +33,8 @@
 			</div>
 			<div id="videoIndexCountSection" class="hidden pointer" style="padding:1% 0% 1% 2%;">
 				<span id="videoIndexCount"></span>
-				<span id="videoPickerShowIcon" style="color:forestgreen; font-size:110%;" class="fa fa-chevron-circle-down videoPickerIcon" onclick="onOpenVideoPicker()"></span>
-				<span id="videoPickerHideIcon" style="color:red; font-size:110%;" class="fa fa-times videoPickerIcon hidden" onclick="onCloseVideoPicker()"></span>
+				<span id="videoPickerShowIcon" style="color:forestgreen; font-size:110%;" class="fa fa-chevron-circle-down pointer" onclick="onOpenVideoPicker()"></span>
+				<span id="videoPickerHideIcon" style="color:red; font-size:110%;" class="fa fa-times pointer hidden" onclick="onCloseVideoPicker()"></span>
 			</div>
 			<p id="videoDescription" style="clear:both; margin:0px;padding:1%;"></p>
 			
