Adjust user create process

--- a/login/index.html
+++ b/login/index.html
@@ -27,6 +27,17 @@
 	
 	<!-- Login form section -->
 	<div id="videoFrameProtectedSection" class="dlf_center_block_xlarge centered">
+		<!-- Create user section -->
+		<div id="createUserSection" class="centered hidden2">
+			<p>If you don't have an account or can't remember yours, <br/> you can
+				<strong>
+					<a href="/create" target="_self" style="text-decoration:none; color:orange;">
+						Create an Account
+					</a>
+				</strong>
+			</p>
+		</div>
+
 		<h2 id="resultsMessage" style="color:red;"></h2>
 
 		<!-- Form for login  -->
@@ -45,15 +56,7 @@
 			<input id="submitButton" style="border:none; " class="pointer dlf_button dlf_button_round_corners dlf_button_blue" type="submit" name="submit" value="Login">
 		</form>
 	</div>
-	<!-- Create user section -->
-	<div id="createUserSection" class="centered hidden2">
-		<br/>
-		<p>Don't have an account already? 
-			<a href="/create" target="_self" style="text-decoration:none; color:orange;">
-				Create an Account
-			</a>
-		</p>
-	</div>
+	
 	
 </body>
 <!-- Common Code -->
