--- a/adventure/index.html
+++ b/adventure/index.html
@@ -3,26 +3,41 @@
 <head>
 	<!-- Base of the path -->
 	<base href="../" target="_blank">
-
 	<title>Dejai's Adventures</title>
-	<link rel="stylesheet" type="text/css" href="src/main.css">
+	<link rel="stylesheet" type="text/css" href="src/css/main.css">
 	<link rel="stylesheet" type="text/css" href="adventure/src/adventure.css">
-	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dlf_styles.css">
+	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="theme_black_bg">
 
+	<div class="menuSection dtk-menu-sticky dtk-theme-blackbg">
+		<div class="menuItems">
+			<div class="menuItem left">
+				<div class="subMenuItem left" style="display:inline-block;">
+					<h1 style="margin:0px;" class="pointer">
+						<span id="homeIcon2" class="fa fa-chevron-circle-left pointer" style="font-size:smaller;" onclick="onReturnHome()"> Dejai's Adventures:</span>
+					</h1>
+				</div>
+				<div class="subMenuItem right">
+					<span id="adventureTitle"></span> <br/>
+					<span class="" onclick="onShowDescription()">About this adventure</span>
+				</div>
+			</div>
+			<div class="menuItem right">
+				<p id="loginSection" style="color:orange;">		
+					<a class="authLink dlf_href_notextdec" href="" style="margin:0px;color:inherit;font-size: smaller;" target="_top"></a>
+				</p>
+			</div>
+		</div>
+		<br style="clear:both;"/>
+	</div>
+
 	<!-- The Menu Section -->
 	<div id="menuPanel" class="centered">
-		<span id="homeIcon" class="fa fa-chevron-circle-left" onclick="onReturnHome()"></span>
-		
 		<!-- Adventure Title & Description -->
-		<h1 id="adventureTitle"></h1>
-		<p id="adventureDescription" class="hidden"></p>
-		<span id="moreDetailsLink" class="pointer additionalDetailsToggle small hidden" onclick="onOpenVideoDetails()">About this adventure</span>
-		<span id="lessDetailsLink" class="pointer additionalDetailsToggle large hidden" onclick="onCloseVideoDetails()">... hide details</span>
-		<hr id="adventureSeparator" style="clear:both;"/>
+		<!-- <h1 id="adventureTitle"></h1> -->
 
 		<!-- Adventure Submenu -->
 		<div id="adventureMenuSection" class="dlf_center_block_xlarge centered" style="clear:both;">
@@ -43,37 +58,33 @@
 		<div id="videoPickerSection" class="hidden"></div>
 	</div>
 
-	<hr id="videoSeparator" style="clear:both;" class="hidden">
-
 	<!-- Main Video Sections -->
-	<div class="centered">
-		<img id="loadingGif" class="hidden" style="width:100px;height:100px;" src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="...loading">
-	</div>
+	<img id="loadingGif" class="hidden hideOnAdventureLoaded" style="width:100px;height:100px;" src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="...loading">
 
-	<!-- Needing to login to watch this adventure -->
-	<div id="videoFrameProtectedSection" class="dlf_center_block_xlarge centered hidden">
-		<h2 id="protectedMessage" class="adventureSubtitle">
-			You have to login to view this adventure
-		</h2>
-		<button class="dlf_button dlf_button_round_corners dlf_button_blue" onclick="onNavigateToLogin()">LOGIN</button>
+	<div id="videoListTest" class="centered hidden showOnAdventureLoaded showOnListView hideOnDescriptionView hideOnContentView">
 	</div>
 
 	<!-- The video frame of this adventure -->
-	<div id="videoFrameSection" style="clear:both;" class="hidden">
+	<div id="videoFrameSection" style="clear:both;" class="hidden showOnContentView hideOnDescriptionView hideOnListView">
+		<span onclick="onBackToContentList()" style="position:absolute;z-index:100;" class="psuedoHyperlink">Back to content list</span>
 		<div id="videoFramePanel" style="position: relative; padding-top: 30.25%;">
-			<img src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="...loading">
 		</div>
 	</div>
 
+	<!-- The description of this adventure -->
+	<div class="hidden showOnDescriptionView hideOnListView hideOnContentView">
+		<span onclick="onBackToContentList()" style="position:absolute;z-index:100;" class="psuedoHyperlink">Back to content list</span>
+		<p id="adventureDescription"></p>
+	</div>
+
 </body>
-<!-- Common Code -->
-<script src="https://dejai.github.io/scripts/js/common.js"></script>
-<!-- My Trello code -->
-<script src="https://dejai.github.io/scripts/js/trellowrapper.js"></script>
 <!-- Stream Embed API -->
 <script src="https://embed.videodelivery.net/embed/sdk.latest.js"></script>
+<!-- Common Scripts -->
+<script src="https://dejai.github.io/scripts/js/v2/my.js?v=7"></script>
+<script src="https://dejai.github.io/scripts/js/v2/trellowrapper.js?v=15"></script>
+<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=15"></script>
 <!-- My Adventure code -->
-<script type="text/javascript" src="src/models.js"></script>
-<script type="text/javascript" src="src/stream.js"></script>
-<script type="text/javascript" src="adventure/src/adventure.js"></script>
+<script type="text/javascript" src="src/js/models.js"></script>
+<script type="text/javascript" src="src/js/adventure.js"></script>
 </html>
